# team-manage

./: .gitignore  Makefile  README.md  integration_docs.md  pyproject.toml  requirements.txt
app/: db_migrations.py
app/dependencies/: auth.py
app/routes/: admin.py  user.py
app/services/: redeem_flow.py  team.py  warranty.py
app/static/css/: admin-dark.css  login.css  user.css
app/static/js/: main.js  redeem.js
app/templates/: base.html
app/templates/admin/: index.html
app/templates/auth/: login.html
app/templates/user/: redeem.html
tests/: test_warranty_issue20.py
