[project]
name = "team-manage"
version = "0.1.0"
description = "GPT Team"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.19.0",
    "bcrypt>=4.1.2",
    "cryptography>=41.0.0",
    "curl-cffi>=0.6.0",
    "fastapi==0.109.0",
    "httpx>=0.27.0",
    "itsdangerous>=2.1.2",
    "jinja2>=3.1.3",
    "pydantic-settings>=2.1.0",
    "pydantic[email]>=2.5.0",
    "pyjwt>=2.8.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "pytz>=2023.3",
    "sqlalchemy>=2.0.25",
    "uvicorn[standard]>=0.27.0",
    "xlsxwriter>=3.1.9",
]

[dependency-groups]
dev = [
    "greenlet>=3.3.2",
]
